Changed to html document format.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Keyport Technologies, Inc.<title>
+</head>
+
+<body>
+    <h1>"Hello World"</h1>
+    <footer>© 2020 Keyport Technologies, Inc. All Rights Reserved.</footer>
+</body>
+
+</html>
