Corrected syntax for title element.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Keyport Technologies, Inc.<title>
+    <title>Keyport Technologies, Inc.</title>
 </head>
 
 <body>
